fix bags with articles z-index

--- a/src/components/Articles/ArticlesListItem.scss
+++ b/src/components/Articles/ArticlesListItem.scss
@@ -10,7 +10,7 @@
     &-title{
         padding: 30px 30px 30px 30px;
         position: absolute;
-        z-index: 3;
+        z-index: 1;
         bottom: 0;
         font-weight: 700;
         text-transform: uppercase;
@@ -28,7 +28,7 @@
         left: 25px;
         width: 0%;
         height: 1%;
-        z-index: 100;
+        z-index: 1;
         transition: width .3s ease-in-out;
         &-border{
             position: relative;
@@ -55,7 +55,7 @@
         right: 0;
         bottom: 3px;
         background: rgba(0,0,0,.2);
-        z-index: 2;
+        z-index: 1;
         opacity: 0;
         transition: opacity .3s ease-in-out;
     }
