--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -5,7 +5,7 @@
     position: sticky;
     top: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 100;
     &-logo{
         display: flex;
         justify-content: center;
